[package]
name = "bidule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
bytes = "1.6.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = "1.36.0"
